--- a/mouse_classifier_web/templates/base.html
+++ b/mouse_classifier_web/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 {% include "head.html" %}
 
-<body >
+<body style="background-color: #35383a;">
 {% block content %}
 {% endblock %}
 </body>
